# commitlint-rs

./: cspell.yml
cli/: Cargo.toml  build.rs
cli/e2e/: default.bats
cli/json-schema/: config.json
cli/src/: args.rs  lib.rs  main.rs  message.rs  result.rs  rule.rs  rules.rs  settings.rs
cli/src/rule/: body_empty.rs  body_max_length.rs  description_empty.rs  description_format.rs  description_max_length.rs  footers_empty.rs  mod.rs  scope.rs  scope_empty.rs  scope_format.rs  scope_max_length.rs  subject_empty.rs  type.rs  type_empty.rs  type_format.rs  type_max_length.rs
cli/src/snapshots/: commitlint__settings__tests__generate_json_schema.snap
schema/: Cargo.toml
schema/src/: main.rs
schema/src/snapshots/: schema__tests__snap_json_schema.snap
